Minor edits: fix overlapping dialogs, simplify path to DropButton, etc.
- fix overlapping dialogs with DropButton by setting z-index to 2
- simplify path to DropButton component from ImportDialog
- comment preventDefault in ImportDialog.close

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -87,6 +87,7 @@ dialog {
   padding: 0;
   color: var(--black-blue);
   border-style: none;
+  z-index: 2;
   &::before /* shadow */ {
     content: '';
     position: absolute;
